Increase the negative offset to make sure radio buttons are hidden even if lots of member cards are visible

--- a/app/assets/stylesheets/screen.css.styl
+++ b/app/assets/stylesheets/screen.css.styl
@@ -883,7 +883,8 @@ form.send_application
 form.new_position_application, .member-card, form.edit_call
   .radio
     position absolute
-    top -999px
+    top -9999px
+    left -9999px
   label.btn
     margin-right -1px
   input#position_application_deputy_of
